--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="theme-color" content="#00ff88">
-	<meta name="description" content="Website pribadi Mas Dika berisi artikel keamanan siber, kode pemrograman Python, HTML, CSS, dan JavaScript, serta kisah inspiratif.">
-	<meta name="keywords" content="Mas Dika, keamanan siber, belajar programming, Python, HTML, CSS, JavaScript, portofolio programmer, website pribadi, PrismJS">
+	<meta name="description" content="Website pribadi Mas Dika berisi artikel keamanan siber, kode pemrograman Python, HTML, CSS, dan JavaScript">
+	<meta name="keywords" content="Mas Dika, keamanan siber, kode programming, Python, HTML, CSS, JavaScript, portofolio programmer, website pribadi, PrismJS">
 	<meta name="author" content="Mas Dika">
 	<meta name="robots" content="index, follow">
 	<meta property="og:title" content="Mas Dika - Website Pribadi & Keamanan Siber">
-	<meta property="og:description" content="Belajar keamanan siber, pemrograman, dan kisah hidup penuh makna. Dibuat sepenuhnya dari nol oleh Mas Dika">
-	<meta property="og:image" content="https://namamu.github.io/media/image.png">
-	<meta property="og:url" content="https://namamu.github.io">
+	<meta property="og:description" content="Menjaga keamanan siber, dan membagikan proyek kode pemrograman yang pernah saya buat. Dibuat sepenuhnya dari nol oleh Mas Dika">
+	<meta property="og:image" content="https://dikzz-coder.github.io/media/image.png">
+	<meta property="og:url" content="https://dikzz-coder.github.io">
 	<meta property="og:type" content="website">
 	<meta name="twitter:card" content="summary_large_image">
 	<title>Mas Dika - Website Pribadi, Keamanan Siber, dan Kode Pemrograman</title>
@@ -56,7 +56,7 @@
 		<a href="#copyright"><i class="fa-solid fa-circle-arrow-down"></i>Scroll Ke Bawah Secara Otomatis</a>
 	</div>
 	<main class="container" id="beranda">
-		<h1 class="title-glow">Website Mas Dika - Keamanan Siber & Pemrograman</h1>
+		<h1 class="title-glow">Mas Dika - Keamanan Siber & Pemrograman</h1>
 		<p class="desc"><i class="fa-solid fa-user-circle"></i>Ini adalah website pribadi resmi milik Mas Dika. Terima kasih sudah berkunjung ke website saya!</p>
 		<img class="main-image" src="media/image.png" alt="Foto atau logo resmi website Mas Dika - Programmer dan Cybersecurity" loading="lazy">
 		<p class="desc"><i class="fa-solid fa-heart-broken"></i>Aku sering merasa sendiri walau dikelilingi banyak orang. Kadang yang aku butuhkan cuma seseorang yang benar benar mendengar. Tapi sampai sekarang, aku masih belajar bertahan dalam sunyi yang berat ini.</p>
@@ -263,9 +263,9 @@ document.addEventListener('DOMContentLoaded', () => {
 	</section>
 	<section class="container" id="kontak">
 		<h2 class="title-glow">Kontak Saya</h2>
-		<p class="desc"><i class="fa-solid fa-comment-dots"></i>Menemukan bug? Komentari saya jika ada bug di website ini:</p>
+		<p class="desc"><i class="fa-solid fa-comment-dots"></i>Menemukan bug? Komentari saya jika ada bug di website ini atau kritik dan saran di website ini:</p>
 		<p class="account"><i class="fa-brands fa-whatsapp"></i>WhatsApp: <a href="https://wa.me/6283890104355" target="_blank" rel="noopener noreferrer">Dika | Always Alone</a></p>
-		<p class="account"><i class="fa-brands fa-github"></i>Github: <a href="https://github.com/dikzzlonnely" target="_blank" rel="noopener noreferrer">dikzzlonnely</a></p>
+		<p class="account"><i class="fa-brands fa-github"></i>Github: <a href="https://github.com/dikzz-coder" target="_blank" rel="noopener noreferrer">dikzz-coder</a></p>
 	</section>
 	<div class="scroll-to-up">
 		<a href="#"><i class="fa-solid fa-circle-arrow-up"></i>Scroll Ke Atas Secara Otomatis</a>
