--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 	<link rel="stylesheet" href="libs/prism/1.30.0/plugins/css/prism-line-numbers.css">
 	<link rel="stylesheet" href="libs/prism/1.30.0/plugins/css/prism-line-highlight.css">
 	<link rel="stylesheet" href="libs/prism/1.30.0/plugins/css/prism-match-braces.css">
+	<link rel="stylesheet" href="libs/prism/1.30.0/plugins/css/prism-show-invisibles.css">
 	<link rel="stylesheet" href="libs/prism/1.30.0/plugins/css/prism-toolbar.css">
 	<link rel="stylesheet" href="style.css">
 	<script defer src="libs/prism/1.30.0/prism.js"></script>
@@ -32,6 +33,8 @@
 	<script defer src="libs/prism/1.30.0/plugins/js/prism-line-numbers.js"></script>
 	<script defer src="libs/prism/1.30.0/plugins/js/prism-line-highlight.js"></script>
 	<script defer src="libs/prism/1.30.0/plugins/js/prism-match-braces.js"></script>
+	<script defer src="libs/prism/1.30.0/plugins/js/prism-show-invisibles.js"></script>
+	<script defer src="libs/prism/1.30.0/plugins/js/prism-normalize-whitespace.js"></script>
 	<script defer src="libs/prism/1.30.0/plugins/js/prism-toolbar.js"></script>
 	<script defer src="libs/prism/1.30.0/plugins/js/prism-show-language.js"></script>
 	<script defer src="libs/prism/1.30.0/plugins/js/prism-copy-to-clipboard.js"></script>
