--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		<p class="desc"><i class="fa-solid fa-user-circle"></i>Ini adalah website pribadi resmi milik Mas Dika. Terima kasih sudah berkunjung ke website saya!</p>
 		<img class="main-image" src="media/image.png" alt="Foto atau logo resmi website Mas Dika - Programmer dan Cybersecurity" loading="lazy">
 		<p class="desc"><i class="fa-solid fa-heart-broken"></i>Aku sering merasa sendiri walau dikelilingi banyak orang. Kadang yang aku butuhkan cuma seseorang yang benar benar mendengar. Tapi sampai sekarang, aku masih belajar bertahan dalam sunyi yang berat ini.</p>
-		<h3 class="typing-text"><i class="fa-solid fa-laptop-code"></i>Author: <span class="text"></span><span class="cursor"></span></h3>
+		<h3 class="typing-text"><i class="fa-solid fa-laptop-code"></i>Website Author: <span class="text"></span><span class="cursor"></span></h3>
 		<video class="main-video" autoplay muted controls loop playsinline preload="metadata">
 			<source src="media/video.mp4" type="video/mp4">
 		</video>
@@ -129,7 +129,7 @@
 		</select>
 		<h2 class="title-glow">Kode Python</h2>
 		<p class="desc"><i class="fa-brands fa-python"></i>Ini adalah proyek kode python sederhana yang pernah saya buat. Program mendeteksi waktu secara real time menggunakan GUI berbasis tkinter!</p>
-		<pre class="language-python line-numbers match-braces" data-line="3,4,25"><code class="language-python">
+		<pre class="language-python line-numbers match-braces" data-line="2,3,24"><code class="language-python">
 # Mengimpor modul
 from tkinter import Tk, Label
 from time import asctime
@@ -164,7 +164,7 @@ root.mainloop()
 		</code></pre>
 		<h2 class="title-glow">Kode HTML</h2>
 		<p class="desc"><i class="fa-brands fa-html5"></i>Ini adalah kode html yang saya buat untuk membuat mentahan background canvas pada website untuk membuat animasi background website matrix hacker!</p>
-		<pre class="language-html line-numbers" data-line="3,8,20"><code class="language-html">
+		<pre class="language-html line-numbers" data-line="2,7,19"><code class="language-html">
 &lt;!DOCTYPE html&gt;
 &lt;html lang="id"&gt;
 
@@ -187,7 +187,7 @@ root.mainloop()
 		</code></pre>
 		<h2 class="title-glow">Kode CSS</h2>
 		<p class="desc"><i class="fa-brands fa-css3"></i>Ini adalah kode css untuk menyesuaikan dan merapikan background matrix hacker!</p>
-		<pre class="language-css line-numbers match-braces" data-line="3,11,16"><code class="language-css">
+		<pre class="language-css line-numbers match-braces" data-line="2,10,15"><code class="language-css">
 /* Mereset semua elemen HTML */
 * {
 margin: 0;
@@ -213,7 +213,7 @@ z-index: -1;
 		</code></pre>
 		<h2 class="title-glow">Kode JavaScript</h2>
 		<p class="desc"><i class="fa-brands fa-js"></i>Ini adalah kode javascript untuk membuat fungsi animasi matrix hacker dan menampilkan background canvas!</p>
-		<pre class="language-javascript line-numbers match-braces" data-line="3,19,39"><code class="language-javascript">
+		<pre class="language-javascript line-numbers match-braces" data-line="2,18,38"><code class="language-javascript">
 // Menunggu elemen HTML selesai dimuat
 document.addEventListener('DOMContentLoaded', () => {
   // Membuat variabel matrix hacker dan background canvas menjadi fullscreen
