--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		<img class="main-image" src="media/image.png" alt="Foto atau logo resmi website Mas Dika - Programmer dan Cybersecurity" loading="lazy">
 		<p class="desc"><i class="fa-solid fa-heart-broken"></i>Aku sering merasa sendiri walau dikelilingi banyak orang. Kadang yang aku butuhkan cuma seseorang yang benar benar mendengar. Tapi sampai sekarang, aku masih belajar bertahan dalam sunyi yang berat ini.</p>
 		<h3 class="typing-text"><i class="fa-solid fa-laptop-code"></i>Website Author: <span class="text"></span><span class="cursor"></span></h3>
-		<h3 class="title-video"><i class="fa-solid fa-video">Video Resolusi 4K</h3>
+		<h3 class="title-video"><i class="fa-solid fa-video"></i>Video Resolusi 4K</h3>
 		<video class="main-video" autoplay muted controls loop playsinline preload="metadata">
 			<source src="media/video.mp4" type="video/mp4">
 		</video>
